--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/jfpl2021/public_html/
-    - /bin/cp -R images $DEPLOYPATH
-    - /bin/rsync -av public/ $DEPLOYPATH
+    - /bin/cp -R public/ $DEPLOYPATH
