--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nPjEi/EkX5rEPOe6Hp9H/IX8gz1dKXeTpmfqKneZFaA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-testjfpldb.alwaysdata.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=testjfpldb_backbonesystems_db
+DB_USERNAME=278874
+DB_PASSWORD=Dani2020.
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
