--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: composer install --prefer-dist --no-interaction
 
       - name: Copy environment file
-        run: cp .env.example .env
+        run: cp .env .env
 
       - name: Generate app key
         run: php artisan key:generate
